--- a/src/AdAuthentication.csproj
+++ b/src/AdAuthentication.csproj
@@ -48,6 +48,7 @@
     <Compile Include="AdGroup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AdUser.cs" />
+    <Compile Include="Validador.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
