--- a/src/AdAuthentication.csproj
+++ b/src/AdAuthentication.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PrincipalExtension.cs" />
     <Compile Include="AdAuthenticator.cs" />
     <Compile Include="AdException.cs" />
     <Compile Include="AdError.cs" />
