--- a/src/AdAuthentication.csproj
+++ b/src/AdAuthentication.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>AdAuthentication</RootNamespace>
     <AssemblyName>AdAuthentication</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -52,11 +53,22 @@
     <Compile Include="Validator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy /Y "$(TargetPath)" "$(SolutionDir)\..\binary\$(TargetFrameworkVersion.Replace("v", "net").Replace(".", ""))"
+copy /Y "$(TargetDir)$(ProjectName).pdb" "$(SolutionDir)\..\binary\$(TargetFrameworkVersion.Replace("v", "net").Replace(".", ""))"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
-  </Target>
+  </Target> -->
   <Target Name="AfterBuild">
-  </Target>
-  -->
+	<MSBuild Condition=" '$(TargetFrameworkVersion)' == 'v4.5.1'"
+		Projects="$(MSBuildProjectFile)"
+		Properties="TargetFrameworkVersion=v4.5"
+		RunEachTargetSeparately="true"  />
+	<MSBuild Condition=" '$(TargetFrameworkVersion)' == 'v4.5'"
+		Projects="$(MSBuildProjectFile)"
+		Properties="TargetFrameworkVersion=v4.0"
+		RunEachTargetSeparately="true"  />
+  </Target>  
 </Project>
