--- a/src/hbehr.AdAuthentication.csproj
+++ b/src/hbehr.AdAuthentication.csproj
@@ -7,9 +7,9 @@
     <ProjectGuid>{E7A2E50E-3CB0-472F-9167-767B7A2C5DD2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AdAuthentication</RootNamespace>
-    <AssemblyName>AdAuthentication</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <RootNamespace>hbehr.AdAuthentication</RootNamespace>
+    <AssemblyName>hbehr.AdAuthentication</AssemblyName>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -63,7 +63,10 @@ copy /Y "$(TargetDir)$(ProjectName).pdb" "$(SolutionDir)\..\binary\$(TargetFrame
   <Target Name="BeforeBuild">
   </Target> -->
   <Target Name="AfterBuild">
+    <MSBuild Condition=" '$(TargetFrameworkVersion)' == 'v4.6.2'" Projects="$(MSBuildProjectFile)" Properties="TargetFrameworkVersion=v4.6.1" RunEachTargetSeparately="true" />
+    <MSBuild Condition=" '$(TargetFrameworkVersion)' == 'v4.6.1'" Projects="$(MSBuildProjectFile)" Properties="TargetFrameworkVersion=v4.6" RunEachTargetSeparately="true" />
+    <MSBuild Condition=" '$(TargetFrameworkVersion)' == 'v4.6'" Projects="$(MSBuildProjectFile)" Properties="TargetFrameworkVersion=v4.5.2" RunEachTargetSeparately="true" />
+    <MSBuild Condition=" '$(TargetFrameworkVersion)' == 'v4.5.2'" Projects="$(MSBuildProjectFile)" Properties="TargetFrameworkVersion=v4.5.1" RunEachTargetSeparately="true" />
     <MSBuild Condition=" '$(TargetFrameworkVersion)' == 'v4.5.1'" Projects="$(MSBuildProjectFile)" Properties="TargetFrameworkVersion=v4.5" RunEachTargetSeparately="true" />
-    <MSBuild Condition=" '$(TargetFrameworkVersion)' == 'v4.5'" Projects="$(MSBuildProjectFile)" Properties="TargetFrameworkVersion=v4.0" RunEachTargetSeparately="true" />
   </Target>
 </Project>
