--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,7 @@ UpgradeLog*.htm
 
 # Microsoft Fakes
 FakesAssemblies/
+/src/.vs/hbehr.AdAuthentication/v15/Server/sqlite3/db.lock
+/src/.vs/hbehr.AdAuthentication/v15/Server/sqlite3/storage.ide
+/src/.vs/hbehr.AdAuthentication/v15/Server/sqlite3/storage.ide-shm
+/src/.vs/hbehr.AdAuthentication/v15/Server/sqlite3/storage.ide-wal
