--- a/src/.Net Framework/hbehr.AdAuthentication/hbehr.AdAuthentication.csproj
+++ b/src/.Net Framework/hbehr.AdAuthentication/hbehr.AdAuthentication.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>hbehr.AdAuthentication</RootNamespace>
     <AssemblyName>hbehr.AdAuthentication</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -63,10 +63,12 @@ copy /Y "$(TargetDir)$(ProjectName).pdb" "$(SolutionDir)\..\binary\$(TargetFrame
   <Target Name="BeforeBuild">
   </Target> -->
   <Target Name="AfterBuild">
+    <MSBuild Condition=" '$(TargetFrameworkVersion)' == 'v4.7'" Projects="$(MSBuildProjectFile)" Properties="TargetFrameworkVersion=v4.6.2" RunEachTargetSeparately="true" />
     <MSBuild Condition=" '$(TargetFrameworkVersion)' == 'v4.6.2'" Projects="$(MSBuildProjectFile)" Properties="TargetFrameworkVersion=v4.6.1" RunEachTargetSeparately="true" />
     <MSBuild Condition=" '$(TargetFrameworkVersion)' == 'v4.6.1'" Projects="$(MSBuildProjectFile)" Properties="TargetFrameworkVersion=v4.6" RunEachTargetSeparately="true" />
     <MSBuild Condition=" '$(TargetFrameworkVersion)' == 'v4.6'" Projects="$(MSBuildProjectFile)" Properties="TargetFrameworkVersion=v4.5.2" RunEachTargetSeparately="true" />
     <MSBuild Condition=" '$(TargetFrameworkVersion)' == 'v4.5.2'" Projects="$(MSBuildProjectFile)" Properties="TargetFrameworkVersion=v4.5.1" RunEachTargetSeparately="true" />
     <MSBuild Condition=" '$(TargetFrameworkVersion)' == 'v4.5.1'" Projects="$(MSBuildProjectFile)" Properties="TargetFrameworkVersion=v4.5" RunEachTargetSeparately="true" />
+    <MSBuild Condition=" '$(TargetFrameworkVersion)' == 'v4.5'" Projects="$(MSBuildProjectFile)" Properties="TargetFrameworkVersion=v4.0" RunEachTargetSeparately="true" />
   </Target>
 </Project>
